<?xml version="1.0"?>
<package format="2">
  <name>ewellix_tlt</name>
  <version>0.0.1</version>
  <description>The ewellix_tlt package</description>

  <maintainer email="support@generationrobots.com">GR</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>control_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
</package>
