<?xml version="1.0"?>
<package format="2">
  <name>ewellix_tlt</name>
  <version>0.0.1</version>
  <description>Ewellix TLT Lift Kit Driver with MoveIt! Controller</description>

  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>control_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
</package>
